--- a/frontend/src/locales/ru/translation.json
+++ b/frontend/src/locales/ru/translation.json
@@ -1,7 +1,7 @@
 {
     "header": {
       "store": "Магазин",
-      "language": "Уз/Ру",
+      "language": "Рус/Узб",
       "loginRegister": "Войти/Регистрация",
       "settings": "Настройки"
     }
