--- a/frontend/src/locales/ru/translation.json
+++ b/frontend/src/locales/ru/translation.json
@@ -4,6 +4,10 @@
       "language": "Рус/Узб",
       "loginRegister": "Войти/Регистрация",
       "settings": "Настройки"
-    }
+    },
+  "content": {
+    "sale": "Скидка",
+    "saleValue": "50%"
+  }
   }
   
